optimize remove duplicates

--- a/1.1 初级算法-数组-删除排序数组中的重复项.md
+++ b/1.1 初级算法-数组-删除排序数组中的重复项.md
@@ -1,16 +1,72 @@
-## 删除排序数组中的重复项
+### 删除排序数组中的重复项
 
-> 给你一个 升序排列 的数组 nums ，请你 原地 删除重复出现的元素，使每个元素 只出现一次 ，返回删除后数组的新长度。元素的 相对顺序 应该保持 一致 。
->
-> 由于在某些语言中不能改变数组的长度，所以必须将结果放在数组nums的第一部分。更规范地说，如果在删除重复项之后有 k 个元素，那么 nums 的前 k 个元素应该保存最终结果。
->
-> 将最终结果插入 nums 的前 k 个位置后返回 k 。
->
-> 不要使用额外的空间，你必须在 原地 修改输入数组 并在使用 O(1) 额外空间的条件下完成。
->
-> 来源：力扣（LeetCode）
+ 给你一个 **升序排列** 的数组 `nums` ，请你 **原地** 删除重复出现的元素，使每个元素 只出现一次 ，返回删除后数组的新长度。元素的 **相对顺序** 应该保持 **一致** 。
 
-### C 代码实现
+ 由于在某些语言中不能改变数组的长度，所以必须将结果放在数组nums的第一部分。更规范地说，如果在删除重复项之后有 `k` 个元素，那么 `nums` 的前 `k` 个元素应该保存最终结果。
+
+ 将最终结果插入 `nums` 的前 `k` 个位置后返回 `k` 。
+
+ 不要使用额外的空间，你必须在 原地 **修改输入数组** 并在使用 O(1) 额外空间的条件下完成。
+
+ **判题标准:**
+
+ 系统会用下面的代码来测试你的题解:
+
+ ```c
+ int[] nums = [...]; // 输入数组
+ int[] expectedNums = [...]; // 长度正确的期望答案
+ 
+ int k = removeDuplicates(nums); // 调用
+ 
+ assert k == expectedNums.length;
+ for (int i = 0; i < k; i++) {
+     assert nums[i] == expectedNums[i];
+ }
+ 如果所有断言都通过，那么您的题解将被 通过。
+ ```
+
+ **示例 1：**
+
+ ```
+ 输入：nums = [1,1,2]
+ 输出：2, nums = [1,2,_]
+ 解释：函数应该返回新的长度 2 ，并且原数组 nums 的前两个元素被修改为 1, 2 。不需要考虑数组中超出新长度后面的元素。
+ ```
+
+
+ **示例 2：**
+
+```
+输入：nums = [0,0,1,1,1,2,2,3,3,4]
+输出：5, nums = [0,1,2,3,4]
+解释：函数应该返回新的长度 5 ， 并且原数组 nums 的前五个元素被修改为 0, 1, 2, 3, 4 。不需要考虑数组中超出新长度后面的元素。
+```
+
+
+ **提示：**
+
+- `1 <= nums.length <= 3 * 10^4`
+- `-10^4 <= nums[i] <= 10^4`
+-  `nums` 已按 **升序** 排列
+
+ 作者：力扣 (LeetCode)
+ 链接：https://leetcode.cn/leetbook/read/top-interview-questions-easy/x2gy9m/
+ 来源：力扣（LeetCode）
+ 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+
+相关标签：数组、双指针
+
+
+
+**复杂度分析**
+
+时间复杂度：O(n)O(n)，其中 nn 是数组的长度。快指针和慢指针最多各移动 nn 次。
+
+空间复杂度：O(1)O(1)。只需要使用常数的额外空间。
+
+
+
+#### C 代码实现
 
 ```c
 int removeDuplicates(int* nums, int numsSize) {
@@ -21,7 +77,7 @@ int removeDuplicates(int* nums, int numsSize) {
 
     int fast = 1, slow = 1;
     while (fast < numsSize) {
-        if (nums[fast] > nums[fast - 1]) {
+        if (nums[fast]  nums[fast - 1]) {
             nums[slow] = nums[fast];
             ++slow;
         }
@@ -30,3 +86,34 @@ int removeDuplicates(int* nums, int numsSize) {
     return slow;
 }
 ```
+
+#### PHP代码实现
+
+```php
+class Solution {
+    
+    /**
+     * @param int[] 
+     * @return int
+     */
+    public function removeDuplicates(array &$nums)
+    {
+        $numSize = \count($nums);
+        if ($numSize <= 1) {
+            return $numSize;
+        }
+
+        $fast = $slow = 1;
+        while ($fast < $numSize) {
+            if ($nums[$fast] > $nums[$fast - 1]) {
+                $nums[$slow] = $nums[$fast];
+                $slow++;
+            }
+            $fast++;
+        }
+        return $slow;
+    }
+}
+
+```
+
